# coint3

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  nightly.yml
configs/: main.yaml
docs/: architecture.md  quickstart.md
results/: daily_pnl.csv  equity_curve.csv  strategy_metrics.csv
src/: yaml.py  yaml_config.py
src/coint2/: __init__.py  cli.py
src/coint2/core/: data_loader.py  math_utils.py  performance.py
src/coint2/engine/: backtest_engine.py
src/coint2/pipeline/: orchestrator.py  pair_scanner.py  walk_forward_orchestrator.py
src/coint2/utils/: __init__.py  config.py  dask_utils.py  logging_utils.py  time_utils.py
tests/: conftest.py  test_data_loader.py  test_pair_scanner.py  test_yaml_import.py
tests/core/: test_cache.py  test_data_loader.py  test_file_glob.py  test_intraday_frequency.py  test_math_utils.py
tests/engine/: test_backtest_engine.py
tests/performance/: test_scan_speed.py
tests/pipeline/: test_pair_scanner_integration.py  test_walk_forward.py
tests/utils/: test_config_loading.py
