[tool.poetry]
name = "coint2"
version = "0.1.0"
description = "Cointegration project"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "*"
pyarrow = "*"
statsmodels = "*"
joblib = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
